--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?famil...");
+@import './fontawesome/scss/fontawesome.scss';
 @import url("http://netdna.bootstrapcdn.com/font-a...");
 
 
@@ -29,9 +29,11 @@ input {
 
 label {
     display: inline-block;
+    margin: 0 0 -1px;
     padding: 15px 25px;
     font-weight: 600x;
     text-align: center;
     color: #bbb;
     border: 1px solid;
+
 }
